Add family_ids and family_cert to details documents   - ingest family_ids from relay microdescriptors   - ingest family_cert from relay server descriptors   - wire fields through DetailsStatus -> DetailsDocument   - add tests for writer and updater paths Make sure we handle multiple bridge assignments Added missing NetworkStatusEntry methods in DummyStatusEntry Cleaned the deprecated new Long(...) usage in DetailsStatusTest